# 2D-Game-Framework

./: .gitignore  animation.h  collision.h  entity.h  frame_manager.h  framework.h  framework_main.h  geometry.h  graphics.h  inputs.h  jmath.h  physics.h  setting_up_environment.txt  todo.txt
Demos/: CMakeLists.txt  Demo.cpp  Platform.cpp  ball.xcf  block.xcf
Demos/resources/: ball.xcf
scripts/: debug_setup.bat  make.bat  make_clean.bat
